--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "enum-values": "^1.2.0",
     "font-awesome": "^4.7.0",
     "ng2-datepicker": "^2.1.6",
     "ngx-bootstrap": "^2.0.0-beta.10",
